style.css
:root {
  /* Colors */
  --color-white: hsl(0, 0%, 100%);
  --color-stone-100: hsl(30, 54%, 90%);
  --color-stone-150: hsl(30, 18%, 87%);
  --color-stone-600: hsl(30, 10%, 34%);
  --color-stone-900: hsl(24, 5%, 18%);
  --color-brown-800: hsl(14, 45%, 36%);
  --color-rose-800: hsl(332, 51%, 32%);
  --color-rose-50: hsl(330, 100%, 98%);

  /* Typography - Families & Weights */
  --font-family-heading: "Young Serif", serif;
  --font-family-body: "Outfit", sans-serif;
  --fw-regular: 400; /* Regular */
  --fw-semibold: 600; /* Semi-bold */
  --fw-bold: 800; /* Bold */

  /* Typography - Sizes */
  --fs-body: 0.625rem; /* 10px */
  --fs-h1: 1.5rem; /* 24px */
  --fs-h2: 0.75rem; /* 12px */
  --fs-h3: 1rem; /* 16px */

  /* Spacing Scale */
  --spacing-xxs: 0.25rem; /* 4px */
  --spacing-xs: 0.5rem; /* 8px */
  --spacing-s: 0.625rem; /* 10px */
  --spacing-sm: 0.75rem; /* 12px */
  --spacing-md: 1rem; /* 16px */
  --spacing-lg: 1.5rem; /* 24px */
  --spacing-lg-plus: 1.75rem; /* 28px */
  --spacing-xl: 2rem; /* 32px */
  --spacing-xxl: 2.5rem; /* 40px */

  /* Section Gaps & Girders */
  --header-gap: var(--spacing-sm)
  --section-gap: var(--spacing-xs);
  --card-padding: var(--spacing-lg);
  --hr-spacing: var(--spacing-xs);
  --li-spacing: ar(--spacing-xxs);

  /* Border Radius Scale */
  --radius-xs: 6px; /* For highlights */
  --radius-sm: 8px; /* For the prep-box */
  --radius-md: 12px; /* For the hero image */
  --radius-lg: 24px; /* For the main recipe card */
}

/* Base Resets */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: var(--font-family-body);
  font-size: var(--fs-body);
  background-color: var(--color-stone-100);
  color: var(--color-stone-600);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: var(--spacing-xxl) var(--spacing-md);
  overflow-x: hidden;
}

.page-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-width: 90rem;
  min-height: 100%;
}

.recipe-card {
  background-color: var(--color-white);
  max-width: 32rem;
  width: 100%;
  border-radius: var(--radius-lg);
  padding: var(--card-padding);
  display: flow-root;
}

/* Gobal Typography */
.recipe-header h1 {
  font-family: var(--font-family-heading);
  color: var(--color-stone-900);
  font-size: var(--fs-h1);
  font-weight: var(--fw-regular);
  line-height: 1.1;
  margin-block-end: var(--section-gap);
}

.ingredients h3,
.instructions h3,
.nutrition h3 {
  font-family: var(--font-family-heading);
  color: var(--color-brown-800);
  font-size: var(--fs-h3);
  font-weight: var(--fw-regular);
  margin-block-end: var(--section-gap);
}

.prep-box h2 {
  color: var(--color-rose-800);
  font-size: var(--fs-h2);
  font-weight: var(--fw-semibold);
  margin-block-end: var(--section-gap);
}

/* Hero Image and Hover Effect */
.recipe-image-container {
  width: 100%;
  aspect-ratio: 2.187 / 1;
  overflow: hidden;
  border-radius: var(--radius-md);
  margin-block-end: var(--section-gap);
}

.hero-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
  transition: transform 0.4s ease-in-out;
}

.recipe-image-container:hover .hero-image {
  transform: scale(1.05);
}

/* Hero Text */
.recipe-header p {
  margin-block-end: var(--spacing-sm);
  line-height: 1.5;
}

/* Prep Box */
.prep-box {
  background-color: var(--color-rose-50);
  padding: var(--spacing-xs) var(--spacing-sm);
  border-radius: var(--radius-sm);
  margin-block-end: var(--section-gap);
  display: block;
}

.prep-box ul {
  padding-left: var(--spacing-xl);
}

.prep-box li {
  margin-block-end: var(--li-spacing);
  padding-left: var(--spacing-xs);
}

.prep-box li::marker {
  color: var(--color-rose-800);
  font-size: var(--fs-small);
}

/* HR Divider */
hr {
  border: 0;
  border-top: 1px solid var(--color-stone-150);
  margin-block: var(--hr-spacing);
}

/* Ingredients, Instructions, and Hover Effects */
.ingredients ul,
.instructions ol {
  padding-left: var(--spacing-md);
  list-style-position: outside;
}

.ingredients li,
.instructions li {
  padding-left: var(--spacing-xs);
  margin-block-end: var(--li-spacing);
  width: 100%;
  display: list-item;
  line-height: 1.5;
  border-radius: var(--radius-xs);
  transition: background-color 0.2s ease;
}

.ingredients li:hover,
.instructions li:hover {
  background-color: var(--color-stone-100);
  cursor: default;
}

.instructions li strong {
  margin-right: var(--spacing-xxs);
}

.ingredients ul li::marker,
.instructions ol li::marker {
  color: var(--color-brown-800);
  font-weight: var(--fw-semibold);
}

/* Nutrition Section */
.nutrition p {
  color: var(--color-stone-600);
  margin-block-end: var(--spacing-sm);
}

.nutrition-table {
  width: 100%;
  border-collapse: collapse;
}

.nutrition-table tr {
  border-block-end: 1px solid var(--color-stone-150);
}

.nutrition-table th,
.nutrition-table td {
  padding-block: var(--spacing-xs);
  padding-inline: var(--spacing-xl);
  text-align: left;
  color: var(--color-stone-600);
}

.nutrition-table th {
  font-weight: var(--fw-regular);
  color: var(--color-stone-600);
  width: 50%;
}

.nutrition-table td.stat {
  color: var(--color-brown-800);
  text-align: left;
  font-weight: var(--fw-semibold);
}

.nutrition-table tr:last-child {
  border-block-end: none;
}

.nutrition-table tr:last-child th,
.nutrition-table tr:last-child td {
  padding-bottom: 0;
}

/* --- Mobile Styles (Up to 650px) --- */
@media (max-width: 650px) {
  body {
    justify-content: flex-start;
    padding: 0;
    background-color: var(--color-white);
  }

  .recipe-card {
    max-width: 100%;
    border-radius: 0;
    padding: var(--spacing-lg);
    verflow: hidden;
  }

  .recipe-image-container {
    margin-inline: calc(var(--card-padding) * -1);
    margin-top: calc(var(--card-padding) * -1);
    margin-bottom: var(--spacing-lg);
    border-radius: 0;
    overflow: hidden;
    aspect-ratio: 16 / 9;
  }
}

